--- a/webapp/assets/css/login/login.css
+++ b/webapp/assets/css/login/login.css
@@ -1,14 +1,15 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
 }
 
 header {
@@ -17,7 +18,6 @@ header {
   background-color: cadetblue;
   color: white;
   text-align: center;
-
 }
 
 footer {
@@ -44,6 +44,11 @@ input {
   margin-bottom: 20px;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .login {
   /* border: 1px solid black; */
   width: 1100px;
@@ -55,11 +60,11 @@ input {
 }
 .box {
   /* border: 1px solid black; */
-    width: 500px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  width: 500px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .box_title {
@@ -74,12 +79,12 @@ input {
 
 .id_box,
 .pw_box {
-    border-bottom: 1px solid black;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    gap: 25px;
+  border-bottom: 1px solid black;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  gap: 25px;
 }
 
 .bt_box {
@@ -93,9 +98,16 @@ input {
 }
 
 .bt_box > button {
-  background-color: #1D3266;
+  background-color: #1d3266;
   color: white;
   border-radius: 30px;
-  width: 200px;
+  width: 250px;
   height: 100%;
+}
+
+.link_box {
+  /* border: 1px solid black; */
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
