--- a/webapp/assets/css/subwayLine/subway.css
+++ b/webapp/assets/css/subwayLine/subway.css
@@ -28,6 +28,16 @@ main{
   background-color: #FFE7C9;
 }
 
+.subway_subwayLine button{
+  background-color: #FFC376;
+  width: 130px;
+  height: 55px;
+  display: inline-block;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
 .subway_subwayLine{
   width: 100%;
   margin: auto;
@@ -42,7 +52,46 @@ main{
   text-align: center;
 }
 
-/* 전체호선 관련 */
+.map_section{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 20px;
+}
+
+
+.map_section div{
+  display: none;
+}
+
+.map_section{
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+
+/* 역리스트 */
+.station_list{
+  width: 197px;
+  height: 554px;
+  background-color: #ffffff;
+  font-size: 24px;
+  padding: 10px;
+}
+
+.station_list div{
+  cursor: pointer;
+  padding: 10px;
+}
+
+.station_info{
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  background-color: #FFC376;
+}
+/* 전체호선 관련 allline*/
 .subway_subwayLine #all{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -52,14 +101,11 @@ main{
   text-align: center;
 }
 
-.subway_subway_img #allline{
-  width: 935px;
-  height: 555px;
-  text-align: center;
-  display: inline-block;
-  justify-content: center;
+.subway_alline_img{
+  display: block;
 }
 
+/* 2호선 관련 */
 .subway_subwayLine #line2{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -68,6 +114,7 @@ main{
   display: inline-block;
 }
 
+/* 3호선 관련 */
 .subway_subwayLine #line3{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -76,6 +123,7 @@ main{
   display: inline-block;
 }
 
+/* 4호선 관련 */
 .subway_subwayLine #line4{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -84,6 +132,7 @@ main{
   display: inline-block;
 }
 
+/* 7호선 관련 */
 .subway_subwayLine #line7{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -92,6 +141,7 @@ main{
   display: inline-block;
 }
 
+/* 9호선 관련 */
 .subway_subwayLine #line9{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -100,6 +150,7 @@ main{
   display: inline-block;
 }
 
+/* 신분당선 관련 */
 .subway_subwayLine #dxline{
   background-color: #FFF8EF;
   border-radius: 30px;
@@ -107,4 +158,13 @@ main{
   height: 55px;
   display: inline-block;
 }
- 
+
+
+/* 마우스로 동작 하는거 관련 */
+.station_list div:hover{
+  background-color: #FFC376;
+}
+
+.subway_subwayLine button:hover{
+  background-color: #FFC376;
+}
