--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -51,13 +51,92 @@ nav ul li div{
 }
 main{
   background-color: #FFE7C9;
-  height: calc(100vh - 220px);
+  /* height: calc(100vh - 220px); */
+  display: flex;
+  justify-content: center;
 }
-.body{
-  width: 80vh;
+.main_body{
+  width: 1200px;
   background-color: black;
   height: 100%;
-  margin: auto;
+}
+.news_banner{
+  background-color: gray;
+  width: 100%;
+  height: 300px;
+  border-radius: 30px;
+}
+.recommend{
+  background-color: aliceblue;
+  height: 250px;
+  display: flex;
+}
+.recommend_activity {
+  background-color: olive;
+  border-radius: 20px;
+  flex: 1;
+}
+.recommend_board{
+  background-color: darksalmon;
+  border-radius: 20px;
+  flex: 1;
+}
+.recommend_title{
+  background-color: yellow;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;
+}
+.recommend_activiies {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 60%;
+  align-items:center;
+  margin-bottom: 30px;
+}
+.recommend_activiies li{
+  margin-top: 20px;
+}
+.recommend_activity a{
+  background-color: white;
+}
+.board_list{
+  margin-bottom: 30px;
+  background-color: black;
+}
+.board_list li{
+  flex: 1;
+  padding: 10px 0;
+  border: 1px solid black;
+}
+.board_list li a{
+  display: flex;
+}
+.board_list li a span{
+  background-color: yellowgreen;
+  color:red;
+}
+.board_list_number{
+  width: 60px;
+  text-align: center;
+}
+.board_list_title{
+  flex: 1;
+}
+.board_list_author{
+  width: 100px;
+  text-align: center;
+}
+.board_list_date{
+  width: 130px;
+  text-align: center;
+}
+
+.explore{
+  background-color: aquamarine;
+  height: 550px;
 }
 footer{
   width: 100%;
