250807 0940 황승우 약관 작업중

--- a/webapp/assets/css/login/modifyPassword.css
+++ b/webapp/assets/css/login/modifyPassword.css
@@ -38,10 +38,8 @@
   gap: 36px;
 }
 
-.box_id,
-.box_name,
-.box_phone,
-.box_author,
+.box_input,
+.box_re,
 .box_next {
   display: flex;
   /* border: 1px solid black; */
@@ -50,29 +48,12 @@
   width: 100%;
   justify-content: center;
 }
-.box_name,
-.box_id,
-.box_phone,
-.box_author,
-.box_next > p {
+.box_input,
+.box_re,
+.box_next> p {
   font-size: 16px;
 }
 
-.box_name {
-  position: relative;
-    left: -80px;
-}
-
-#member_care,
-#member_normal {
-  font-size: 16px;
-}
-label {
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
 
 input {
   border: 2px solid black;
@@ -81,42 +62,23 @@ input {
   padding-left: 8px;
 }
 
-.box_name > input,
-.box_id > input,
-.box_phone > input {
+.box_input > input,
+.box_re > input {
   width: 400px;
 }
 
-.box_phone {
-  position: relative;
-  left: -34px;
-}
 
-.box_phone > button {
+
+.box_re > button {
   background-color: #2f52aa;
   color: white;
   padding: 8px 20px;
   border-radius: 8px;
 }
 
-.box_author {
-  position: relative;
-  left: -14px;
-}
-.input_number {
-  width: 300px;
-}
-
-.box_author > button {
-  background-color: #2f52aa;
-  color: white;
-  padding: 8px 20px;
-  border-radius: 8px;
-}
-
-.timer {
-  width: 50px;
-  height: 50%;
+.box_next{
+      position: relative;
+    bottom: -100px;
 }
 
 .box_next > button {
@@ -124,4 +86,5 @@ input {
   background-color: #1d3266;
   color: white;
   border-radius: 8px;
+
 }
