--- a/webapp/assets/css/myPageNormal/Normal_reference.css
+++ b/webapp/assets/css/myPageNormal/Normal_reference.css
@@ -3,7 +3,8 @@
   padding: 0;
 }
 
-header, footer {
+header,
+footer {
   width: 100%;
   height: 110px;
   background-color: bisque;
@@ -15,7 +16,7 @@ main {
   display: flex;
 }
 
-.main_sidebar{
+.main_sidebar {
   width: 180px;
   height: 100%;
   background-color: rgb(159, 159, 255);
@@ -35,55 +36,69 @@ main {
   padding: 15px;
 }
 
-/* ============================ */
-.div_mark{
-  flex:1;
+/* ============================= */
+.div_mark {
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
-.div_mark .title{
+
+.div_mark .title {
   font-size: 30px;
   margin: 30px;
 }
-.mark_nav{
+
+.div_choose ul {
   display: flex;
-  margin: 100px 150px 0px 150px;
+  list-style-type: none;
+  margin: 100px 0px 0px 150px;
+}
+
+.mark_nav {
+  display: flex;
+  margin: 0px 150px 0px 150px;
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
 }
-.mark_nav ul{
+
+.mark_nav ul {
   display: flex;
   flex: 1;
   list-style-type: none;
   background-color: rgb(191, 201, 201);
   justify-content: space-around;
 }
-.mark_nav input{
+
+.mark_nav input {
   margin-left: 20px;
 }
 
-.page{
+.page {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.page ul{
+
+.page ul {
   display: flex;
   list-style-type: none;
 }
-.page ul li{
+
+.page ul li {
   margin: 10px;
 }
-.div_delete{
-  display: flex;
-  justify-content: center;
-}
+
 button {
-  background-color: red;
+  background-color: rgb(4, 0, 255);
   color: white;
   width: 80px;
   height: 40px;
+  margin-left: 150px;
   border-radius: 15px;
-
+  border: 0px;
+}
+.div_delete{
+  margin: 0px;
+  padding: 0px;
 }
