--- a/webapp/assets/css/subwayLine/subway.css
+++ b/webapp/assets/css/subwayLine/subway.css
@@ -63,9 +63,10 @@ main {
   justify-content: center;
   gap: 30px;
   padding: 20px;
+  
 }
 
-.map_section > div {
+.map_section div {
   display: none;
 }
 
@@ -96,3 +97,4 @@ main {
   font-size: 20px;
   background-color: #ffc376;
 }
+
