--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -25,14 +25,39 @@ main{
 .map_container{
   display: flex;
   justify-content: center;
-  padding-bottom: 50px;
 }
 
 .map_api{
   align-content: center;
+  width: 500px;
+  height: 500px;
 }
 
 .map_api > img{
   width: 100%;
   height: 80%;
+  cursor: pointer;
+}
+
+.sidebar{
+  display: none; /*평소에는 none이다가 활성화 되면 flex로 변경*/
+  flex-direction: column;
+  background-color: #FFF8EF;
+  margin: auto 40px;
+}
+
+.map_info, .map_detail{
+  background-color: white;
+  margin: 20px 30px 20px;
+}
+
+.map_info{
+  width: 200px;
+  height: 200px;
+  justify-content: flex-end;
+}
+.map_detail{
+  width: 200px;
+  height: 150px;
+  justify-content: flex-end;
 }
