--- a/webapp/assets/css/myPageNormal/Normal_reference.css
+++ b/webapp/assets/css/myPageNormal/Normal_reference.css
@@ -94,11 +94,13 @@ button {
   color: white;
   width: 80px;
   height: 40px;
-  margin-left: 150px;
+  margin-right: 150px;
   border-radius: 15px;
   border: 0px;
 }
 .div_delete{
   margin: 0px;
   padding: 0px;
+  display: flex;
+  justify-content: end;
 }
