--- a/webapp/assets/css/myPageNormal/Normal_Modify.css
+++ b/webapp/assets/css/myPageNormal/Normal_Modify.css
@@ -37,6 +37,11 @@ main {
 }
 
 /* ============================= */
+.div_mark{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 .div_mark .title {
   font-size: 30px;
   margin: 30px;
