--- a/webapp/assets/css/myPageCare/Care_Mark.css
+++ b/webapp/assets/css/myPageCare/Care_Mark.css
@@ -3,10 +3,11 @@
   padding: 0;
 }
 
-header, footer {
+header,
+footer {
   width: 100%;
   height: 110px;
-  background-color: black;
+  background-color: bisque;
 }
 
 main {
@@ -15,7 +16,7 @@ main {
   display: flex;
 }
 
-.main_sidebar{
+.main_sidebar {
   width: 180px;
   height: 100%;
   background-color: rgb(159, 159, 255);
@@ -31,67 +32,8 @@ main {
   margin: 15px;
 }
 
-nav ul li {
+.main_sidebar ul li {
   padding: 15px;
 }
 
-/* ============================ */
-.div_mark{
-  flex:1;
-  display: flex;
-  flex-direction: column;
-}
-.div_mark div{
-  font-size: 30px;
-  margin: 30px;
-}
-.mark_nav{
-  display: flex;
-  margin: 100px 150px 0px 150px;
-}
-.mark_nav ul{
-  display: flex;
-  flex: 1;
-  list-style-type: none;
-  background-color: aqua;
-  justify-content: space-around;
-}
-.mark_nav ul input{
-  margin-left: 20px;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.page{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  bottom: 220px;
-  right: 90px;
-  
-}
-
-.page ul{
-  display: flex;
-  list-style-type: none;
-  margin-bottom: 50px;
-  position: fixed;
-  display: inline-flex;
-  justify-content: center;
-  bottom: 220px;
-  right: 90px;
-}
-
-button{
-  background-color: red;
-  color: white;
-  width: 80px;
-  height: 40px;
-  margin-left: 590px;
-  border-radius: 15px;
-  text-align: center;
-  justify-content: center;
-  position: fixed;
-  bottom: 110px;
-}
+/* ============================= */
