--- a/webapp/assets/css/myPageCare/Care_Post.css
+++ b/webapp/assets/css/myPageCare/Care_Post.css
@@ -37,66 +37,65 @@ main {
 }
 
 /* ============================= */
-/* ============================ */
-.div_mark{
-  flex:1;
+.div_mark {
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
-.div_mark div{
+
+.div_mark .title {
   font-size: 30px;
   margin: 30px;
 }
-.mark_nav{
+
+.div_choose ul {
   display: flex;
-  margin: 100px 150px 0px 150px;
+  list-style-type: none;
+  padding-left: 150px;
 }
-.mark_nav ul{
+
+.mark_nav {
+  display: flex;
+  margin: 0px 150px 0px 150px;
+  height: 50px;
+  align-items: center;
+  background-color: rgb(191, 201, 201);
+}
+
+.mark_nav ul {
   display: flex;
   flex: 1;
   list-style-type: none;
-  background-color: aqua;
+  background-color: rgb(191, 201, 201);
   justify-content: space-around;
 }
-.mark_nav ul input{
-  margin-left: 20px;
-  align-items: center;
-  justify-content: center;
 
+.mark_nav input {
+  margin-left: 20px;
 }
 
-.page{
+.page {
   display: flex;
   justify-content: center;
   align-items: center;
-  bottom: 220px;
-  right: 90px;
-  text-align: center;
-  
 }
 
-.page ul{
+.page ul {
   display: flex;
   list-style-type: none;
-  margin-bottom: 50px;
-  position: fixed;
-  display: inline-flex;
-  justify-content: center;
-  bottom: 220px;
-  text-align: center;
-  
 }
-
-button{
+.page ul li{
+  margin: 10px;
+}
+.div_delete{
+  margin: 0;
+}
+button {
   background-color: red;
   color: white;
   width: 80px;
   height: 40px;
-  margin-left: 590px;
+  margin-left: 150px;
   border-radius: 15px;
-  text-align: center;
-  justify-content: center;
-  position: fixed;
-  bottom: 110px;
+  border: 0px;
 }
-
