--- a/webapp/assets/css/myPageNormal/Normal_Modify.css
+++ b/webapp/assets/css/myPageNormal/Normal_Modify.css
@@ -46,3 +46,23 @@ main {
   font-size: 30px;
   margin: 30px;
 }
+.arlim{
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+  margin: 0px 30px;
+  border-radius: 15px;
+  border: 1px solid black;
+  height: 100px;
+}
+.arlim div{
+  background-color: blanchedalmond;
+  width: 20px;
+  height: 20px;
+  margin: 20px;
+}
+.arlim nav{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
