--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -61,3 +61,39 @@ main{
   height: 150px;
   justify-content: flex-end;
 }
+
+.modalbox{
+  display: flex;
+  background-color: rgba(217, 217, 217, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+}
+
+.login_check_model{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 20px;
+  width: 400px;
+  height: 300px;
+}
+
+.x-box{
+  text-align: right;
+  font-size: 25px;
+  font-weight: bold;
+  top:10px;
+  right:10px;
+  cursor:pointer;
+}
+
+.modal_text{
+  font-size: 30px;
+  margin: auto;
+  padding-bottom: 20px;
+}
