250807 11:08 장성주 마이페이지 돌봄 진행중

--- a/webapp/assets/css/myPageCare/Care_Modify.css
+++ b/webapp/assets/css/myPageCare/Care_Modify.css
@@ -46,3 +46,9 @@ main {
   font-size: 30px;
   margin: 30px;
 }
+
+.info{
+  background-color: aqua;
+  text-align: center;
+  justify-content: center;
+}
