--- a/webapp/assets/css/sign/terms.css
+++ b/webapp/assets/css/sign/terms.css
@@ -1,3 +1,9 @@
+main {
+  width: 100%;
+  height: calc(100vh - 220px);
+  /* background-color: coral; */
+}
+
 .terms {
   /* border: 1px solid black; */
   width: 450px;
