--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -57,13 +57,11 @@ main{
 }
 .main_body{
   width: 1200px;
-  background-color: black;
   height: 100%;
 }
 .news_banner{
   /* 이게 .slides-wrap임. */
   margin-top: 35px;
-  background-color: gray;
   width: 100%;
   height: 300px;
   border-radius: 30px;
@@ -77,10 +75,6 @@ main{
   height: 300px;
   left: 0;
   position: absolute;
-  background-color: yellow;
-}
-.slide-box li{
-  background-color: green;
 }
 .slide-img{
   width: 1200px;
@@ -108,30 +102,30 @@ main{
 
 .recommend{
   margin-top: 50px;
-  background-color: aliceblue;
   height: 250px;
   display: flex;
 }
 .recommend_activity {
   margin-right: 10px;
-  background-color: olive;
+  background-color: #F0F0F0;
+  border: solid 3px #1D3266;
   border-radius: 20px;
   flex: 1;
 }
 .recommend_board{
   margin-left: 10px;
-  background-color: darksalmon;
+  background-color: #F0F0F0;
+  border: solid 3px #1D3266;
   border-radius: 20px;
   flex: 1;
 }
 .recommend_title{
-  background-color: yellow;
+  background-color: lightgray;
   text-align: center;
   font-size: 20px;
   margin-top: 30px;
 }
 .recommend_activiies {
-  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -143,11 +137,10 @@ main{
   margin-top: 20px;
 }
 .recommend_activity a{
-  background-color: white;
+  color: black;
 }
 .board_list{
   margin-bottom: 30px;
-  background-color: black;
 }
 .board_list li{
   flex: 1;
@@ -158,7 +151,6 @@ main{
   display: flex;
 }
 .board_list li a span{
-  background-color: yellowgreen;
   color:red;
 }
 .board_list_number{
@@ -177,47 +169,53 @@ main{
   text-align: center;
 }
 .explore{
-  margin-top: 50px;
-  background-color: aquamarine;
+  margin: 50px 0;
   height: 550px;
   display: flex;
 }
 .explore_map{
   margin-right: 10px;
   height: 100%;
-  background-color:#1D3266;
   flex: 1;
   border-radius: 20px;
+  overflow: hidden;
+  border: #1D3266 4px solid;
+}
+.map_img{
+  height: 100%;
 }
 .explore_care{
   margin-left: 10px;
   height: 100%;
   width: 300px;
-  background-color:darkkhaki;
+  background-color: #F0F0F0;
+  border: solid 3px #1D3266;
   border-radius: 20px;
 }
 .care_profile{
-  background-color: crimson;
   display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
-.profile_introduction{
-  flex-wrap: wrap;
+.profile_info{
+  display: flex;
 }
 .profile_pic_box{
   width: 80px;
   height: 80px;
   overflow: hidden;
   border-radius: 50%;
-  margin-left: 10px;
+  margin: 0 10px;
 }
 .profile_pic{
-  width: 70px;
+  width: 80px;
 }
 .day_box{
   display: flex;
-  padding-left: 7px;
-  background-color: black;
+  padding-left: 10px;
   width: max-content;
+  /* margin: 5px 0 0 2px; */
+  margin-top: 7px;
 }
 .day{
   border: solid 3px #1D3266;
@@ -228,23 +226,28 @@ main{
   margin-right: 7px;
 }
 .profile_text{
-  background-color: #1D3266;
-  height: max-content;
   left: 40%;
   width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1;
+  margin: 0 10px;
 }
 .profile_name{
   background-color: wheat;
   width: max-content;
   font-size: 16px;
+  border-radius: 15px;
+  padding: 5px 13px;
+  border: solid 2px black;
 }
 .profile_introduction{
-  width: 100px;
-  background-color: pink;
+  width:100%;
+  padding-top: 7px;
   font-size: 10px;
+  height: 100%;
+  overflow: hidden;
 }
 footer{
   width: 100%;
