250807 12:13 강버들 헤더 푸터 추가

--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -196,6 +196,7 @@ main{
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  background-color: #1D3266;
 }
 .profile_info{
   display: flex;
