--- a/webapp/assets/css/myPageCare/Care_Matching.css
+++ b/webapp/assets/css/myPageCare/Care_Matching.css
@@ -75,6 +75,17 @@ main {
   margin-left: 20px;
 }
 
+.matching_list{
+  width: 1212px;
+  margin: 0px 150px 0px 150px;
+  display: flex;
+  flex: 1;
+  border: 2px solid black;
+  background-color: white;
+  
+
+}
+
 .page {
   display: flex;
   justify-content: center;
@@ -98,6 +109,9 @@ button {
   margin-right: 150px;
   border-radius: 15px;
   border: 0px;
+  text-align: center;
+  justify-content: center;
+  
 }
 .div_add{
   display: flex;
