--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -92,7 +92,7 @@ main{
   height: 300px;
 }
 
-.x-box{
+.modal_closebtn{
   text-align: right;
   font-size: 25px;
   font-weight: bold;
@@ -110,5 +110,10 @@ main{
 .wishbtn{
   width: 50px;
   height: 25px;
-  
+  margin: 0px auto;
+  cursor: pointer;
+}
+
+.info_content{
+  list-style-type: none;
 }
