250807 21:28 이재빈 개인정보 수정

--- a/webapp/assets/css/myPageNormal/Normal_Mark.css
+++ b/webapp/assets/css/myPageNormal/Normal_Mark.css
@@ -45,6 +45,9 @@ main {
   font-size: 30px;
   margin: 30px;
 }
+form{
+  flex: 1;
+}
 .mark_nav{
   display: flex;
   margin: 100px 150px 0px 150px;
