--- a/webapp/assets/css/myPageNormal/Normal_Messeage.css
+++ b/webapp/assets/css/myPageNormal/Normal_Messeage.css
@@ -41,12 +41,12 @@ main {
   display: flex;
   flex-direction: column;
 }
+form {
+  flex: 1;
+  margin-top: 50px;
+}
 
-<<<<<<< HEAD
-.div_mark div {
-=======
 .div_mark .title {
->>>>>>> main
   font-size: 30px;
   margin: 30px;
 }
@@ -62,12 +62,9 @@ main {
 .mark_nav {
   display: flex;
   margin: 0px 150px 0px 150px;
-<<<<<<< HEAD
-=======
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
->>>>>>> main
 }
 
 .mark_nav ul {
@@ -78,11 +75,7 @@ main {
   justify-content: space-around;
 }
 
-<<<<<<< HEAD
-.mark_nav ul input {
-=======
 .mark_nav input {
->>>>>>> main
   margin-left: 20px;
 }
 
@@ -99,14 +92,10 @@ main {
 .page ul li{
   margin: 10px;
 }
-<<<<<<< HEAD
-
-=======
 .div_delete{
   margin: 0;
   padding: 0;
 }
->>>>>>> main
 button {
   background-color: red;
   color: white;
