--- a/webapp/assets/css/myPageNormal/Normal_reference.css
+++ b/webapp/assets/css/myPageNormal/Normal_reference.css
@@ -42,12 +42,11 @@ main {
   display: flex;
   flex-direction: column;
 }
-
-<<<<<<< HEAD
-.div_mark div {
-=======
+form{
+  flex: 1;
+  margin-top: 50px;
+}
 .div_mark .title {
->>>>>>> main
   font-size: 30px;
   margin: 30px;
 }
@@ -55,22 +54,15 @@ main {
 .div_choose ul {
   display: flex;
   list-style-type: none;
-<<<<<<< HEAD
-  padding-left: 150px;
-=======
-  margin: 100px 0px 0px 150px;
->>>>>>> main
+  margin: 0px 150px;
 }
 
 .mark_nav {
   display: flex;
   margin: 0px 150px 0px 150px;
-<<<<<<< HEAD
-=======
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
->>>>>>> main
 }
 
 .mark_nav ul {
@@ -81,11 +73,7 @@ main {
   justify-content: space-around;
 }
 
-<<<<<<< HEAD
-.mark_nav ul input {
-=======
 .mark_nav input {
->>>>>>> main
   margin-left: 20px;
 }
 
@@ -109,11 +97,6 @@ button {
   color: white;
   width: 80px;
   height: 40px;
-<<<<<<< HEAD
-  margin-left: 150px;
-  border-radius: 15px;
-  border: 0px;
-=======
   margin-right: 150px;
   border-radius: 15px;
   border: 0px;
@@ -123,5 +106,4 @@ button {
   padding: 0px;
   display: flex;
   justify-content: end;
->>>>>>> main
 }
