250807 21:35 장성주 마이페이지 돌봄 진행중:

--- a/webapp/assets/css/myPageCare/Care_Post.css
+++ b/webapp/assets/css/myPageCare/Care_Post.css
@@ -74,6 +74,29 @@ main {
   margin-left: 20px;
 }
 
+.post_list input {
+  margin-left: 20px;
+}
+.post_list{
+  display: flex;
+  align-items: center;
+  margin: 0px 150px;
+  height: 50px;
+}
+
+.post_list ul{
+  display: flex;
+  flex: 1;
+  list-style-type: none;
+  justify-content: space-around;
+}
+
+.post_list a{
+  text-decoration: none;
+  color: black;
+}
+
+
 .page {
   display: flex;
   justify-content: center;
