--- a/webapp/assets/css/myPageCare/Care_Matching.css
+++ b/webapp/assets/css/myPageCare/Care_Matching.css
@@ -76,13 +76,12 @@ main {
 }
 
 .matching_list{
-  width: 1212px;
   margin: 0px 150px 0px 150px;
   display: flex;
   flex: 1;
   border: 2px solid black;
   background-color: white;
-  
+  justify-content: center;
 
 }
 
@@ -117,3 +116,58 @@ button {
   display: flex;
   justify-content: center;
 }
+
+/* 모달 */
+.modal {
+  /* display: none; */
+  position: fixed;
+  top: 0;
+  width: 900px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 10px;
+  margin-left: 30%;
+}
+
+.modal_container{
+  background-color: aqua;
+  text-align: center;
+  padding: 30px;
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal #complete_modal button{
+  justify-content: right;
+  margin-right: 0;
+}
+.modal_container input{
+  margin: 10px;
+}
+
+.modal_button {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+#cansel_modal{
+  background-color: white;
+  border: 2px solid red;
+  color: black
+}
+
+#success_button{
+  position: absolute;
+
+  right: 20px;
+  padding: 8px 16px;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
