250807 22:10 강버들 헤더, 푸터 추가

--- a/webapp/assets/css/header.css
+++ b/webapp/assets/css/header.css
@@ -1,51 +1,34 @@
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    /* font-weight: 500; 적용 안됨 */
-    font-style: normal;
-}
-*{
-  margin: 0;
-  padding: 0;
-  border: 0;
-  text-decoration-line: none;
-  list-style-type: none;
-  color: black;
-  font-family: 'Pretendard-Regular';
-  /* #FFE7C9 */
-  /* #1D3266 */
-}
-header{
+.site_header{
   background-color: #FFF8EF;
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-header div span a img{
+.site_header div span a img{
   height: 60px;
 }
-header div{
+.site_header div{
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-header div span a{
+.site_header div span a{
   font-size: 16px;
   margin-right: 7px;
 }
-nav{
+.site_header nav{
   background-color: #1D3266;
 }
-nav ul{
+.site_header nav ul{
   display: flex;
   justify-content:space-around;
 }
 
-nav ul li div a{
+.site_header nav ul li div a{
   text-decoration-line: none;
   color: white;
 }
-nav ul li div{
+.site_header nav ul li div{
   height: 50px;
 }
