250807 22:11  장성주 마이페이지 돌봄 게시판 모달 수정중

--- a/webapp/assets/css/myPageCare/Care_Matching.css
+++ b/webapp/assets/css/myPageCare/Care_Matching.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 header,
@@ -36,138 +37,55 @@ main {
   padding: 15px;
 }
 
-/* ============================= */
-.div_mark {
+/* ----------------------------- */
+.post_edit {
   flex: 1;
-  display: flex;
-  flex-direction: column;
+  padding: 40px 100px;
 }
 
-.div_mark .title {
+.post_edit h2 {
+  padding: 5px;
   font-size: 30px;
-  margin: 30px;
-}
-
-.div_choose ul {
-  display: flex;
-  list-style-type: none;
-  margin: 100px 0px 0px 150px;
-}
-
-.matching_month {
-  display: flex;
-  margin: 0px 150px 0px 150px;
-  height: 50px;
-  align-items: center;
-  background-color: rgb(191, 201, 201);
   border: 2px solid black;
 }
-
-.matching_month ul {
+.re_post_info {
   display: flex;
-  flex: 1;
-  list-style-type: none;
-  background-color: rgb(191, 201, 201);
-  justify-content: space-around;
-}
-
-.matching_month input {
-  margin-left: 20px;
-}
-
-.matching_list{
-  margin: 0px 150px 0px 150px;
-  display: flex;
-  flex: 1;
-  border: 2px solid black;
-  background-color: white;
-  justify-content: center;
-
-}
-
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.page ul {
-  display: flex;
-  list-style-type: none;
-}
-
-.page ul li {
-  margin: 10px;
-}
-
-button {
-  background-color: rgb(4, 0, 255);
-  color: white;
-  width: 80px;
-  height: 40px;
-  margin-right: 150px;
-  border-radius: 15px;
-  border: 0px;
-  text-align: center;
-  justify-content: center;
-  
-}
-.div_add{
-  display: flex;
-  justify-content: center;
-}
-
-/* 모달 */
-.modal {
-  /* display: none; */
-  position: fixed;
-  top: 0;
-  width: 900px;
-  height: 400px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  z-index: 10px;
-  margin-left: 30%;
-}
-
-.modal_container{
+  padding: 5px;
   background-color: aqua;
-  text-align: center;
-  padding: 30px;
-  border-radius: 30px;
-  justify-content: center;
-  align-items: center;
+  font-size: 24px;
+  border: 2px solid black;
+}
+.post_content_re {
+  margin-top: 10px;
+  padding: 20px;
+  background-color: #fdfdfd;
+  border: 2px solid black;
+  height: auto;
+  width: auto;
+  height: 500px;
 }
 
-.modal #complete_modal button{
-  justify-content: right;
-  margin-right: 0;
-}
-.modal_container input{
-  margin: 10px;
-}
-
-.modal_button {
+.buttons {
   display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  justify-content: flex-end;
+  gap: 5px;
+  margin-top: 5px 0px 5px;
 }
 
-#cansel_modal{
-  background-color: white;
-  border: 2px solid red;
-  color: black
-}
-
-#success_button{
-  position: absolute;
-
-  right: 20px;
-  padding: 8px 16px;
-  color: white;
-  border: none;
+.buttons button {
+  width: 100px;
+  height: 50px;
+  border-radius: 15px;
   cursor: pointer;
+}
+
+.btn_cancle {
+  background-color: white;
+  color: red;
+}
+
+.btn_compelete {
+  background-color: navy;
+  color: white;
 }
 
