250807 21:28 이재빈 매칭기록 중

--- a/webapp/assets/css/myPageNormal/Normal_Modify.css
+++ b/webapp/assets/css/myPageNormal/Normal_Modify.css
@@ -72,4 +72,22 @@ form{
 }
 form .normalmodify{
   display: flex;
+  flex-direction: column;
+  background-color: beige;
+  border: 1px solid black;
+}
+form .normalmodify div{
+  display: flex;
+  margin: 0px;
+  background-color: rgb(255, 172, 46);
+  height: 50px;
+}
+
+form .normalmodify div div{
+  margin-right: 50px;
+  align-items: center;
+  border: 1px solid black;
+}
+form .normalmodify div nav ul li{
+  list-style-type: none;
 }
