--- a/webapp/assets/css/myPageNormal/Normal_Matching.css
+++ b/webapp/assets/css/myPageNormal/Normal_Matching.css
@@ -42,3 +42,63 @@ main {
   display: flex;
   flex-direction: column;
 }
+.div_mark .title {
+  font-size: 30px;
+  margin: 30px;
+}
+form{
+  margin: 50px 30px;
+  border: 1px solid black;
+  border-radius: 15px;
+  background-color: bisque;
+}
+.month{
+  border-bottom: 1px solid black;
+  height: 50px;
+  align-items: center;
+}
+.month ul{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+.month ul li{
+  list-style-type: none;
+  font-size: 20px;
+  justify-content: space-between;
+}
+.matcing ul{
+  display: flex;
+}
+.matching ul li{
+  list-style-type: none;
+  height: 100px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.matching ul li div{
+  margin: 0px 20px;
+}
+.matching ul li button{
+  height: 50px;
+  width: 100px;
+  margin: 0px 20px;
+  border-radius: 30px;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.page ul li {
+  margin: 10px;
+}
