250808 1:08 김태현 뉴스 메인페이지 html, css 까지 제작

--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -1,24 +1,83 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
 
-.header, .footer{
+.header,
+.footer {
   width: 100%;
   height: 110px;
   background-color: #FFF8EF;
 }
 
-main{
+main {
   width: 100%;
   height: calc(100vh - 220px);
   background-color: #FFE7C9;
 }
 
+.news_container {
+  display: flex;
+  justify-content: center;
+}
+
+.news_topmenu {
+  display: flex;
+  flex-direction: row;
+  margin: 30px auto;
+}
+
+.searchIcon {
+  width: 20px;
+  height: 20px;
+}
+
+.searchbar {
+  display: flex;
+  justify-content: center;
+}
+
+.underbar {
+  background-color: #FFE7C9;
+  border: 0px;
+  border-bottom: 1px solid black;
+}
+
+.search_btn {
+  background-color: #FFE7C9;
+  border: 0px;
+  cursor: pointer;
+}
+
+.all_news a:link,
+.all_news a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.title {
+  font-size: 30px;
+}
+
+.all_news {
+  margin-right: 300px;
+  margin-top: 50px;
+}
+.searchbar{
+  margin-left: 200px;
+  margin-top: 50px;
+}
+
+.slides{
+  border: 1px solid black;
+  width: 800px;
+  height: 300px;
+  margin: auto;
+}
