250808 09:05 장성주 마이페이지 돌봄 진행중

--- a/webapp/assets/css/myPageCare/Care_Post_re.css
+++ b/webapp/assets/css/myPageCare/Care_Post_re.css
@@ -1,8 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'pretendard-regular';
 }
-
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 header,
 footer {
   width: 100%;
@@ -122,7 +128,7 @@ main {
   display: flex;
   justify-content: right;
   gap: 20px;
-  
+
 }
 
 #check {
