--- a/webapp/assets/css/myPageCare/Care_Matching.css
+++ b/webapp/assets/css/myPageCare/Care_Matching.css
@@ -1,9 +1,14 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: 'pretendard-regular';
 }
-
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 header,
 footer {
   width: 100%;
