--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -81,3 +81,9 @@ main {
   height: 300px;
   margin: auto;
 }
+
+.card1, .card2, .card3{
+  width: 800px;
+  height: 300px;
+  background-color: #FFF8EF;
+}
