--- a/webapp/assets/css/myPageNormal/Normal_Point.css
+++ b/webapp/assets/css/myPageNormal/Normal_Point.css
@@ -78,27 +78,56 @@
 form{
   display: flex;
   flex-direction: row;
-  margin: 60px 150px;
+  margin: 60px 300px;
   justify-content: space-between;
 }
 .point_have{
   border: 1px solid black;
   border-radius: 15px;
   background-color: bisque;
-  width: 500px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 20px;
+  padding-top: 20px;
+}
+.point_have .point_have_title{
+  margin: 20px;
+}
+.point_have .point_point{
+  width: 300px;
+  height: 60px;
+  border: 1px solid black;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.point_have .button{
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.point_have .button button{
+  width: 250px;
+  height: 60px;
+  margin: 30px;
+  border: 1px solid black;
+  border-radius: 15px;
 }
 
 .point_use{
   border: 1px solid black;
   border-radius: 15px;
   background-color: bisque;
-  width: 500px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 20px;
+  padding-top: 20px;
+}
+.point_use .point_use_title{
+  margin: 20px;
 }
