--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -26,6 +26,7 @@ main {
 .news_container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .news_topmenu {
@@ -80,9 +81,10 @@ main {
   width: 800px;
   height: 300px;
   margin: auto;
+  list-style-type: none;
 }
 
-.card1, .card2, .card3{
+.card{
   width: 800px;
   height: 300px;
   background-color: #FFF8EF;
