--- a/webapp/assets/css/news/newsSearch.css
+++ b/webapp/assets/css/news/newsSearch.css
@@ -16,16 +16,16 @@ main {
   background-color: #FFE7C9;
 }
 
-.news_container {
+.search_result_container {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.news_topmenu {
+.search_result_topmenu {
   display: flex;
   flex-direction: row;
-  margin: 30px auto;
+  margin: 10px auto;
 }
 
 .searchIcon {
@@ -45,24 +45,17 @@ main {
 }
 
 .search_btn {
+  max-width: 20px;
+  max-height: 20px;
   background-color: #FFE7C9;
   border: 0px;
   cursor: pointer;
 }
 
-.all_news a:link,
-.all_news a:visited {
-  color: black;
-  text-decoration: none;
-}
-
 .title {
   font-size: 30px;
-}
-
-.all_news {
   margin-right: 300px;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
 .searchbar {
@@ -70,34 +63,13 @@ main {
   margin-top: 50px;
 }
 
-.slides_wrap {
-  border: 1px solid black;
-  width: 800px;
-  height: 300px;
-  position: relative;
-  margin: auto;
-  list-style-type: none;
-}
-
-.slides {
+.search_result_card{
   display: flex;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  left: 0;
+  flex-wrap: wrap;
 }
 
-.card {
-  width: 800px;
-  height: 300px;
+.card{
+  width: 350px;
+  height: 150px;
   background-color: #FFF8EF;
-}
-
-.slides>li:nth-child(2)>.card,
-.slides>li:nth-child(3)>.card,
-.slides>li:nth-child(4)>.card,
-.slides>li:last-child>.card {
-  display: none;
 }
