--- a/webapp/assets/css/admin/sidebar.css
+++ b/webapp/assets/css/admin/sidebar.css
@@ -11,7 +11,7 @@
   height: 30px;
 }
 
- ul {
+.sidebar >  ul {
   width: 100%;
   height: 100%;
   display: flex;
@@ -20,7 +20,7 @@
   list-style-type: none;
      background-color: #D9D9D9;
 }
-
+ 
 .sidebar > ul > a > li, .sidebar > ul > div > li {
   width: 100%;
   height: 60px;
