250808 13:39 이재빈 전체 수정중

--- a/webapp/assets/css/myPageNormal/normalPwCheck.css
+++ b/webapp/assets/css/myPageNormal/normalPwCheck.css
@@ -3,19 +3,13 @@
   padding: 0;
 }
 
-header, footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
-}
-
 main {
   width: 100%;
   height: calc(100vh - 200px);
   display: flex;
 }
 
-nav {
+.main_sidebar {
   width: 180px;
   height: 100%;
   background-color: rgb(159, 159, 255);
@@ -23,7 +17,7 @@ nav {
   flex-direction: column;
 }
 
-.main_sidebar div{
+.main_sidebar div {
   height: 150px;
   width: 150px;
   background-color: rgb(27, 255, 217);
@@ -33,8 +27,10 @@ nav {
 
 .main_sidebar ul li {
   padding: 15px;
+  border-bottom: 1px solid black;
 }
-/* ======================== */
+
+/* ============================= */
 
 .pw_check{
   flex: 1;
@@ -49,6 +45,7 @@ input{
   height: 50px;
   margin-left: 20px;
   font-size: 20px;
+  border: 1px solid black;
 }
 button{
   width: 100px;
