--- a/webapp/assets/css/myPageNormal/normalMatching.css
+++ b/webapp/assets/css/myPageNormal/normalMatching.css
@@ -3,13 +3,6 @@
   padding: 0;
 }
 
-header,
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
-}
-
 main {
   width: 100%;
   height: calc(100vh - 200px);
@@ -34,6 +27,7 @@ main {
 
 .main_sidebar ul li {
   padding: 15px;
+  border-bottom: 1px solid black;
 }
 
 /* ============================= */
