250808 14:19 김태현 카드뉴스 내용문장 추가

--- a/webapp/assets/css/news/newsList.css
+++ b/webapp/assets/css/news/newsList.css
@@ -81,6 +81,8 @@ main {
   height: 150px;
   background-color: #FFF8EF;
   margin: 10px 20px;
+  border: 1px solid black;
+  border-radius: 20px;
 }
 
 .pagination{
@@ -91,4 +93,9 @@ main {
 .active{
   color: red;
   cursor: default;
+}
+
+.card p {
+  margin: 30px auto;
+  text-align: center;
 }
