250808 14:24 이재빈 회원탈퇴 중

--- a/webapp/assets/css/myPageNormal/normalMatching.css
+++ b/webapp/assets/css/myPageNormal/normalMatching.css
@@ -17,7 +17,7 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar div {
+.main_sidebar img {
   height: 150px;
   width: 150px;
   background-color: rgb(27, 255, 217);
