--- a/webapp/assets/css/admin/sidebar.css
+++ b/webapp/assets/css/admin/sidebar.css
@@ -4,6 +4,7 @@
   height: calc(100vh - 220px);
   position: absolute;
   background-color: #D9D9D9;
+  z-index:300;
 }
 
 .blank {
@@ -27,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  
 
 }
 
@@ -58,6 +59,7 @@ ul> div > li:hover {
   display: flex;
   flex-direction: column;
   height: 140%;
+  background-color:white;
 }
 
 .sidebar > ul > .board:hover > ul > a {
