250808 22:00 강버들 음식점 리스트 js 작업 중

--- a/webapp/assets/css/restaurant/restaurant.css
+++ b/webapp/assets/css/restaurant/restaurant.css
@@ -69,7 +69,7 @@ main{
   border-top: 15px solid transparent;
   border-left: 25px solid transparent;
   border-right: 25px solid white;
-  /* display: none; */
+  display: none;
 }
 .region_small{
   background-color: crimson;
