--- a/webapp/assets/css/myPageCare/careProfile.css
+++ b/webapp/assets/css/myPageCare/careProfile.css
@@ -33,9 +33,7 @@ main {
   background-color: #ff80ab;
   border-radius: 50%;
   margin: 0 auto 20px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  display: block;
 }
 
 .sidebar ul {
@@ -49,88 +47,214 @@ main {
   cursor: pointer;
 }
 
-/* ******* */
-.main_container{
+/* ********************* */
+.div_mark {
+  flex: 1;
   display: flex;
   flex-direction: column;
-}
-
-.div_mark{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   width: 100%;
 }
 
-.title{
+.title {
   padding: 40px 100px 0px;
-
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.profile_section{
+.main_container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 100px;
+}
+
+.profile_section {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin: 20px 0;
 }
 
-.profile_section img{
+.profile_section img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  margin-bottom: 0px;
+  object-fit: cover;
 }
 
-.profile_section button{
-  margin-bottom: 0;
-  margin: 5px;
-  bottom: 0;
-  align-items: flex-end;
+.profile_section button {
+  margin: 0 5px;
+  padding: 5px 10px;
+  background-color: white;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-form .caremodify{
-  margin: 30px;
+.caremodify {
+  margin: 30px 0;
   display: flex;
   flex-direction: column;
   background-color: rgb(189, 189, 170);
   border: 1px solid black;
 }
 
-.possible_date{
+.caremodify > div {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  border: 2px solid black;
+}
+
+.caremodify > div > div:first-child {
+  background-color: #e5e5e5;
+  padding: 20px;
+  font-weight: bold;
   display: flex;
-  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  border-right: 2px solid black;
 }
 
-.possible_date button{
-  border-radius: 50%;
+.caremodify > div > div:last-child {
+  background-color: #f4f4f4;
+  padding: 20px;
+}
+
+.name_date .possible_date {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.possible_date button {
+  width: 30px;
+  height: 30px;
   background-color: white;
-  margin: 20px 10px;
-  height: 20px;
-  width: 20px;
+  border: 1px solid #aaa;
   cursor: pointer;
-  border: 1px solid black;
 }
-
-.possible_date #check{
+.possible_date button:selected {
+  background-color: rgb(0, 0, 0);
+  color: black;
+}
+.possible_date #check {
+  width: 50px;
   background-color: #2f4db1;
   color: white;
-  border-radius: 15%;
-  height: 20px;
-  width: 50px;
-}
-.possible_date div{
-  margin-top: 20px;
+  border-radius: 5px;
 }
 
-.recode{
+.reode_detail ul {
   display: flex;
-}
-.license .manuscript .experience{
-  border: 1px solid black;
-  margin: 20px; 
-  width: 200px;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.recode > li :nth-child(1){
-  
+.reode_detail li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.reode_detail label {
+  width: 100px;
+}
+
+.reode_detail input[type="file"] {
+  flex: 1;
+}
+
+.palce_detail ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.palce_detail input {
+  width: 300px;
+  padding: 5px;
+}
+
+.palce_detail button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.email_detail {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.email_detail input {
+  width: 300px;
+  padding: 5px;
+}
+
+.email_detail button {
+  padding: 5px 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.introduce_detail {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.introduce_detail input {
+  height: 120px;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  resize: none;
+}
+
+.introduce_detail button {
+  align-self: flex-end;
+  background-color: #001860;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
+
+
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 500;
+  left: 0; 
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: fixed;
+  margin-left: 50%;
+  top: 0;
+  background-color: #fff;
+  padding: 40px;
+  border: 1px solid #ccc;
+  width: 400px;
+  text-align: center;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+
+.modal-content button {
+  margin-top: 20px;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 10px;
+  background-color: #001860;
+  color: white;
+  cursor: pointer;
 }
